# raytracer

./: CMakeLists.txt  README.md
include/: canvas.h  light.h  material.h  matrix.h  plane.h  ray.h  sphere.h  tuple.h  world.h
src/: CMakeLists.txt  canvas.cpp  matrix.cpp  plane.cpp  ray.cpp  sphere.cpp  tracer.cpp  tuple.cpp  world.cpp
test/: CMakeLists.txt  canvas_tests.cpp  matrix_tests.cpp  plane_tests.cpp  ray_tests.cpp  transformation_tests.cpp  tuple_tests.cpp
